# cmake-cpp-modules-template

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile-debian  Dockerfile-silkeh  LICENSE  README.md  conanfile.txt  profile-clang-kernelci.txt  profile-clang-manjaro.txt  profile-clang-silkeh.txt  profile-clang.txt  profile-stdclang.txt  profile.txt
cmake/: clang_modules.cmake  gcc_modules.cmake
cppcoro/: CMakeLists.txt
cppcoro/src/: cppcoro.cxx
fmt/: CMakeLists.txt
fmt/src/: fmtm.cc  format.cc  os.cc
fmthu/: CMakeLists.txt
fmthu/src/: fmt_experiment.cc
fmtm/: CMakeLists.txt
foobar/: CMakeLists.txt
foobar/src/: bar.cxx  compute.cu  compute.ixx  cuda_hello.cxx  cycle.cxx  cycleA.cxx  cycleB.cxx  foo.cxx
foobar/tests/: CMakeLists.txt  main.cxx  test_bar.cxx  test_coro.cxx  test_cuda.cxx  test_cycle.cxx  test_eigen.cxx  test_foo.cxx
headers/: CMakeLists.txt
headers/src/: main.cxx
headersunits/: CMakeLists.txt  help.h
headersunits/src/: main.cxx
helloworld/: CMakeLists.txt
helloworld/src/: main.cxx
minimal/: CMakeLists.txt
minimal/src/: lib.cxx  main.cxx
modules/cppcoro/: CMakeLists.txt
modules/cppcoro/src/: cppcoro.cppm
modules/cuda/: CMakeLists.txt
modules/eigen/: CMakeLists.txt
modules/eigen/src/: eigen.cppm  eigen.dense.cppm  eigen.geometry.cppm  eigen.lu.cppm  eigen.qr.cppm  eigen.sparse.cppm  eigen.svd.cppm  eigen.tensor.cppm
modules/fmt/: CMakeLists.txt
modules/pybind11/: CMakeLists.txt
modules/pybind11/src/: pybind11.cppm
modules/range-v3/: CMakeLists.txt
modules/stdcxx/: CMakeLists.txt
modules/stdcxx/src/: std-iostream.cppm
modules/ut/: CMakeLists.txt
modules/ut/src/: ut.cppm
modules/ut/src/boost/: ut.hpp
rangev3/: CMakeLists.txt
rangev3/src/: range_v3.algorithm.cxx  range_v3.cxx  range_v3.range.cxx  range_v3.views.cxx
std/: CMakeLists.txt  std.cxx
std/src/: std-algorithm.cppm  std-array.cppm  std-atomic.cppm  std-cctype.cppm  std-cfenv.cppm  std-chrono.cppm  std-cinttypes.cppm  std-clocale.cppm  std-cmath.cppm  std-condition_variable.cppm  std-coroutine.cppm  std-csetjmp.cppm  std-csignal.cppm  std-cstdarg.cppm  std-cstddef.cppm  std-cstdint.cppm  std-cstdio.cppm  std-cstdlib.cppm  std-cstring.cppm  std-ctime.cppm  std-cuchar.cppm  std-cwchar.cppm  std-cwctype.cppm  std-exception.cppm  std-fstream.cppm  std-functional.cppm  std-initializer_list.cppm  std-iostream.cppm  std-iterator.cppm  std-limits.cppm  std-list.cppm  std-map.cppm  std-memory.cppm  std-mutex.cppm  std-numeric.cppm  std-queue.cppm  std-random.cppm  std-stdexcept.cppm  std-string.cppm  std-thread.cppm  (+6 more)
stdcxx/: CMakeLists.txt
stdcxx/src/: fmt.cppmd  range-v3.cppmd  std-algorithm.cppm  std-iostream.cppm  std-iterator.cppm  std-memory.cppm  std-string.cppm  std-tuple.cppm  std-vector.cppm  stdcxx.cppm
stdhu/: CMakeLists.txt
stdhu/src/: stdhu.cppm
ut/: CMakeLists.txt
ut/src/: ut.cxx
ut/src/boost/: ut-dirty.hpp  ut-master.hpp  ut.hpp
